# bitcoin-substreams-analytics

./: ._target  .gitignore  CLICKHOUSE_SETUP.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs  clickhouse-sink.yaml  simple-substreams.yaml  sink_config.yaml  substreams.yaml
clickhouse-bitcoin/: Cargo.toml  Makefile  README.md  schema.sql  substreams.yaml
clickhouse-bitcoin/src/: lib.rs
dashboard/: index.html
dashboard/scripts/: api.js  charts.js  main.js
dashboard/styles/: main.css
proto/: analytics.proto  utxo.proto
scripts/: run-substreams.sh  setup-clickhouse.sh
src/: debug.rs  lib.rs  utils.rs
src/mappers/: address.rs  block.rs  mempool.rs  mod.rs  transaction.rs  utxo.rs
src/mappers/tests/: block_test.rs
src/pb/: mod.rs
src/utils/: bitcoin_utils.rs  metrics_utils.rs  mod.rs
