[package]
name = "substreams-bitcoin-analytics"
version = "0.1.0"
edition = "2021"

[lib]
name = "substreams_bitcoin_analytics"
crate-type = ["cdylib"]

[dependencies]
prost = "0.13"
prost-types = "0.13"
substreams = "0.6"
substreams-bitcoin = "2.0.0"
hex = "0.4"
chrono = "0.4"

[build-dependencies]
prost-build = "0.13"
