[package]
name = "substreams-bitcoin-analytics"
version = "0.1.0"
edition = "2021"

[lib]
name = "substreams_bitcoin_analytics"
crate-type = ["cdylib"]

[dependencies]
prost = "0.11.9"
prost-types = "0.11.9"
substreams = "0.5.22"
substreams-bitcoin = "1.0.0"
hex = "0.4"
chrono = "0.4"
# Removed wasm-bindgen as it's causing compatibility issues
