[package]
name = "clickhouse-bitcoin"
version = "0.1.0"
edition = "2021"
description = "Bitcoin ClickHouse schema for Substreams"
repository = "https://github.com/PaulieB14/bitcoin-substreams-analytics"
license = "MIT"

[dependencies]
substreams-sink-sql = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clickhouse-rs = "1.0.0-alpha.1"
